--- a/detail-product.html
+++ b/detail-product.html
@@ -17,7 +17,7 @@
       <div class="container">
         <div class="header-navigation">
           <a href="javascript:void(0)" class="logo">
-            <img src="./assets/img/logo.svg" alt="img">
+            <img src="./assets/img/logo-white.svg" alt="img">
           </a>
           <div class="nav-wrapper darken">
             <div class="nav-content">
@@ -300,7 +300,7 @@
                   Высота потолков
                 </div>
                 <div class="product-feed__image-grid__info-value">
-                  3,1-4,5 м
+                  3,1-4,5 <span>м</span>
                 </div>
               </div>
             </li>
@@ -313,7 +313,7 @@
                   До Кремля
                 </div>
                 <div class="product-feed__image-grid__info-value">
-                  15 км
+                  15 <span>км</span>
                 </div>
               </div>
             </li>
@@ -326,7 +326,7 @@
                   Подземная парковка
                 </div>
                 <div class="product-feed__image-grid__info-value">
-                  631 место
+                  631 <span>место</span>
                 </div>
               </div>
             </li>
@@ -339,7 +339,7 @@
                   До ТТК
                 </div>
                 <div class="product-feed__image-grid__info-value">
-                  15 мин
+                  15 <span>мин</span>
                 </div>
               </div>
             </li>
@@ -1181,11 +1181,12 @@
             <img src="./assets/img/donwload-img.png" alt="Primavera">
           </div>
           <h2>
+
+            Скачайте
             <span>
-              Скачайте
+              презентацию
+              комплекса Primavera
             </span>
-            презентацию
-            комплекса Primavera
           </h2>
           <p>
             В презентации — расположение, архитектура, инфраструктура, информация о квартирах и техническом оснащении
@@ -1209,10 +1210,11 @@
         <div class="map-section__inner">
           <div class="map-section__head">
             <h2>
+
+              Primavera
               <span>
-                Primavera
+                на карте
               </span>
-              на карте
             </h2>
             <div class="map-section__address">
               <address>
