--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
             <div class="nav-content">
               <div class="nav-content__head">
                 <a href="javascript:void(0)" class="logo">
-                  <img src="./assets/img/logo.svg" alt="img">
+                  <img src="./assets/img/logo-white.svg" alt="img">
                 </a>
                 <button type="button" class="close-menu">
                   <svg width="16" height="16" viewBox="0 0 16 16" fill="none" xmlns="http://www.w3.org/2000/svg">
@@ -347,7 +347,7 @@
             <div class="projects-hp__left-head">
               <div class="projects-hp__left-info">
                 <h2>
-                  Наши<br />
+                  Наши
                   <span>
                     проекты
                   </span>
